--- a/Allmund/Allmund.vcxproj
+++ b/Allmund/Allmund.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Allmund\Graphics\IndexBuffer.h" />
     <ClInclude Include="src\Allmund\Graphics\Shader.h" />
     <ClInclude Include="src\Allmund\Engine.h" />
     <ClInclude Include="src\Allmund\Log.h" />
@@ -22,6 +23,7 @@
     <ClInclude Include="src\Allmund\Graphics\VertexBuffer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Allmund\Graphics\IndexBuffer.cpp" />
     <ClCompile Include="src\Allmund\Graphics\Shader.cpp" />
     <ClCompile Include="src\Allmund\Engine.cpp" />
     <ClCompile Include="src\Allmund\Log.cpp" />
