--- a/Allmund/Allmund.vcxproj
+++ b/Allmund/Allmund.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Allmund\Graphics\Material.h" />
     <ClInclude Include="src\Allmund\Graphics\IndexBuffer.h" />
     <ClInclude Include="src\Allmund\Graphics\OpenGL.h" />
     <ClInclude Include="src\Allmund\Graphics\Shader.h" />
@@ -22,8 +23,10 @@
     <ClInclude Include="src\Allmund\EntryPoint.h" />
     <ClInclude Include="src\Allmund\Window.h" />
     <ClInclude Include="src\Allmund\Graphics\VertexBuffer.h" />
+    <ClInclude Include="src\Allmund\Graphics\UniformBuffer.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Allmund\Graphics\Material.cpp" />
     <ClCompile Include="src\Allmund\Graphics\IndexBuffer.cpp" />
     <ClCompile Include="src\Allmund\Graphics\OpenGL.cpp" />
     <ClCompile Include="src\Allmund\Graphics\Shader.cpp" />
@@ -32,6 +35,7 @@
     <ClCompile Include="src\Allmund\Application.cpp" />
     <ClCompile Include="src\Allmund\Window.cpp" />
     <ClCompile Include="src\Allmund\Graphics\VertexBuffer.cpp" />
+    <ClCompile Include="src\Allmund\Graphics\UniformBuffer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
